--- a/views/error.ejs
+++ b/views/error.ejs
@@ -16,16 +16,13 @@
 
 <body class="grey lighten-2">
   <div class="row">
-        <div class="col s12">
-          <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-              <span class="card-title"><%= message %> <%= error.status %></span>
-              <p><%= error.stack %></p>
+        <div class="col s12 m8 offset-m2">
+          <div class="card">
+            <div class="card-content grey-text">
+              <span class="card-title lime-text center"><%= message %> <%= error.status %></span>
+              <p class="truncate"><%= error.stack %></p>
             </div>
-            <div class="card-action">
-              <a href="#">This is a link</a>
-              <a href="#">This is a link</a>
-            </div>
+
           </div>
         </div>
       </div>
