--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,21 +1,48 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <title><%= title %></title>
-      <!--Import Google Icon Font-->
-      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="../stylesheets/materialize.css"  media="screen,projection"/>
+<html>
 
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
+<head>
+  <title>
+    <%= title %>
+  </title>
+  <!--Import Google Icon Font-->
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--Import materialize.css-->
+  <link type="text/css" rel="stylesheet" href="../stylesheets/materialize.css" media="screen,projection" />
 
-    <body>
-      <h1 class="lime-text"><%= title %></h1>
-      <p class="grey-text darken-4">Welcome to <%= title %></p>
-      <!--Import jQuery before materialize.js-->
-      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <script type="text/javascript" src="../javascripts/materialize.js"></script>
-    </body>
-  </html>
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#c0ca33">
+</head>
+
+<body>
+  <nav class="lime">
+    <div class="nav-wrapper">
+      <a href="#!" class="brand-logo">Sandeep</a>
+      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="sass.html">Sass</a></li>
+        <li><a href="badges.html">Components</a></li>
+        <li><a href="collapsible.html">Javascript</a></li>
+        <li><a href="mobile.html">Mobile</a></li>
+      </ul>
+      <ul class="side-nav" id="mobile-demo">
+        <li><a href="sass.html">Sass</a></li>
+        <li><a href="badges.html">Components</a></li>
+        <li><a href="collapsible.html">Javascript</a></li>
+        <li><a href="mobile.html">Mobile</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <h1 class="lime-text"><%= title %></h1>
+  <p class="grey-text darken-4">Welcome to
+    <%= title %>
+  </p>
+  <!--Import jQuery before materialize.js-->
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript" src="../javascripts/materialize.js"></script>
+  <script type="text/javascript" src="../javascripts/script.js"></script>
+</body>
+
+</html>
