--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,19 +18,19 @@
 <body>
   <nav class="lime">
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo">Sandeep</a>
+      <a href="#!" class="brand-logo">&nbsp;<%= logo %></a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">Javascript</a></li>
-        <li><a href="mobile.html">Mobile</a></li>
+        <li><a href="https://github.com/SandeepVattapparambil/">Github</a></li>
+        <li><a href="https://twitter.com/SandeepVTPRL">Twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/sandeep-vattapparambil-4129496b/">Linkedin</a></li>
+        <li><a href="https://plus.google.com/u/0/+SandeepVattapparambilNilambur">Google+</a></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">Javascript</a></li>
-        <li><a href="mobile.html">Mobile</a></li>
+        <li><a href="https://github.com/SandeepVattapparambil/">Github</a></li>
+        <li><a href="https://twitter.com/SandeepVTPRL">Twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/sandeep-vattapparambil-4129496b/">Linkedin</a></li>
+        <li><a href="https://plus.google.com/u/0/+SandeepVattapparambilNilambur">Google+</a></li>
       </ul>
     </div>
   </nav>
