side-nav updates

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,9 +9,11 @@
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Import materialize.css-->
   <link type="text/css" rel="stylesheet" href="../stylesheets/materialize.css" media="screen,projection" />
-
+  <!--Import mdi.css - third party icon set-->
+  <link href="../stylesheets/materialdesignicons.css" media="all" rel="stylesheet" type="text/css" />
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!--Set Android theme color-->
   <meta name="theme-color" content="#c0ca33">
 </head>
 
@@ -21,16 +23,16 @@
       <a href="#!" class="brand-logo">&nbsp;<%= logo %></a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="https://github.com/SandeepVattapparambil/">Github</a></li>
-        <li><a href="https://twitter.com/SandeepVTPRL">Twitter</a></li>
-        <li><a href="https://www.linkedin.com/in/sandeep-vattapparambil-4129496b/">Linkedin</a></li>
-        <li><a href="https://plus.google.com/u/0/+SandeepVattapparambilNilambur">Google+</a></li>
+        <li><a href="https://github.com/SandeepVattapparambil/"><i class="mdi mdi-github-circle"></i></a></li>
+        <li><a href="https://twitter.com/SandeepVTPRL"><i class="mdi mdi-twitter"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/sandeep-vattapparambil-4129496b/"><i class="mdi mdi-linkedin-box"></i></a></li>
+        <li><a href="https://plus.google.com/u/0/+SandeepVattapparambilNilambur"><i class="mdi mdi-google-plus-box"></i></a></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
-        <li><a href="https://github.com/SandeepVattapparambil/">Github</a></li>
-        <li><a href="https://twitter.com/SandeepVTPRL">Twitter</a></li>
-        <li><a href="https://www.linkedin.com/in/sandeep-vattapparambil-4129496b/">Linkedin</a></li>
-        <li><a href="https://plus.google.com/u/0/+SandeepVattapparambilNilambur">Google+</a></li>
+        <li><a href="https://github.com/SandeepVattapparambil/"><i class="mdi mdi-github-circle"></i> Github</a></li>
+        <li><a href="https://twitter.com/SandeepVTPRL"><i class="mdi mdi-twitter"></i> Twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/sandeep-vattapparambil-4129496b/"><i class="mdi mdi-linkedin-box"></i> Linkedin</a></li>
+        <li><a href="https://plus.google.com/u/0/+SandeepVattapparambilNilambur"><i class="mdi mdi-google-plus-box"></i> Google+</a></li>
       </ul>
     </div>
   </nav>
