--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,8 @@
   <link type="text/css" rel="stylesheet" href="../stylesheets/materialize.css" media="screen,projection" />
   <!--Import mdi.css - third party icon set-->
   <link href="../stylesheets/materialdesignicons.css" media="all" rel="stylesheet" type="text/css" />
+  <!--Import NProgress stylesheet-->
+  <link href="../stylesheets/nprogress.css" media="all" rel="stylesheet" type="text/css" />
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!--Set Android theme color-->
@@ -44,6 +46,8 @@
   <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script type="text/javascript" src="../javascripts/materialize.js"></script>
+  <script type="text/javascript" src="../javascripts/nprogress.js"></script>
+
   <script type="text/javascript" src="../javascripts/script.js"></script>
 </body>
 
