--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,26 @@
 /*
 Custom Stylesheet
 */
+
+
+/*Loader*/
+
+div.overlay {
+  z-index: 999;
+  display: table;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+div.overlay>div {
+  display: table-cell;
+  width: 100%;
+  height: 100%;
+  background: #cddc39;
+  opacity: 1.5;
+  text-align: center;
+  vertical-align: middle;
+}
