pinterest meta added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
   <title>
     <%= title %>
   </title>
+  <meta name="p:domain_verify" content="192ef9886c5291af272f863c60dc179e"/>
   <!--Import Google Icon Font-->
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Import materialize.css-->
